--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Listy list m i</title>
+    <title>Listy list m </title>
     <style>
       p { color: red; }
       ol { display: flex; }
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    <p>These are some red red words.</p>
+    <p>These are some red red a words.</p>
     <ol>
       <li>Apple apple berry berry sauce sauce sauce.<br>
           Cook it on the stove and serve it to your boss.
