--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    <p>These are some red red red redred words.</p>
+    <p>These are some red red redred words.</p>
     <ol>
       <li>Apple apple berry berry sauce sauce sauce.<br>
           Cook it on the stove and serve it to your boss.
